--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -45,6 +45,7 @@ All resources are curated by the WP3 Team and the list is updated irregularly.</
 - [Eurobarometer polls](https://www.europarl.europa.eu/at-your-service/de/be-heard/eurobarometer): EU survey asking citizens, including media trust per country
 - [Digital News Report](https://www.digitalnewsreport.org/): Reuters study on media trust by country
 - [Reuters' classification of payment models](https://reutersinstitute.politics.ox.ac.uk/our-research/pay-models-online-news-us-and-europe-2019-update): Reuters Institute funded research on common payment models for news sources
+- [Database of Variables for Content Analysis](https://www.hope.uzh.ch/doca/index): The open access database compiles, systematizes and evaluates relevant content-analytical variables of communication and political science research areas and topics.
 
 ## Miscellaneous Information about Media
 
