--- a/flaskinventory/templates/add/generic.html
+++ b/flaskinventory/templates/add/generic.html
@@ -3,7 +3,7 @@
 
 
 {% from "helpers/_formhelpers.html" import render_field %}
-<form method="POST" action="" enctype="multipart/form-data">
+<form method="POST" action="" id="form-add-new" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
     <fieldset class="form-group mb-3">
         <legend class="border-bottom mb-4">{{ title }}</legend>
