--- a/flaskinventory/templates/helpers/_viewhelpers.html
+++ b/flaskinventory/templates/helpers/_viewhelpers.html
@@ -1,6 +1,8 @@
 {% macro render_icon(entry) %}
 {% if 'Source' in entry['dgraph.type'] %}
     <h2><i class="icon-{{ entry.channel.unique_name }} color-{{ entry.channel.unique_name }}" alt="{{ entry.channel.name }}"></i></h2>
+{% elif 'Channel' in entry['dgraph.type'] %}
+    <h2><i class="icon-{{ entry.unique_name }} color-{{ entry.unique_name }}" alt="{{ entry.name }}"></i></h2>
 {% elif 'Organization' in entry['dgraph.type'] %}
     <h2>
     {% if entry.ownership_kind == "political party" %}
