--- a/flaskinventory/templates/view/elements/general_information.html
+++ b/flaskinventory/templates/view/elements/general_information.html
@@ -99,7 +99,7 @@
         {% endif %} 
         {% if entry.url %}
             <dt class="col-sm-3">URL</dt>
-            <dd class="col-sm-9"><a href="{{ entry.arxiv }}" target="_blank">{{ entry.url }}</a></dd>
+            <dd class="col-sm-9"><a href="{{ entry.url }}" target="_blank">{{ entry.url }}<i class="fas fa-external-link-alt mx-2" alt="External Link"></i></a></dd>
         {% endif %}
         {% if entry.doi %}
             <dt class="col-sm-3">DOI</dt>
