--- a/flaskinventory/templates/add/sidebar.html
+++ b/flaskinventory/templates/add/sidebar.html
@@ -6,7 +6,7 @@
     <div class="list-group list-group-flush border-bottom scrollarea p-3">
 
         <p>
-            If you provide a DOI, arXiv, or R-Package name, the inventory tries to get some data automatically!
+            If you provide a DOI, arXiv, Python module, or R-Package name, the inventory tries to get some data automatically!
         </p>
 
         <div class="row">
@@ -29,12 +29,18 @@
                 <div class="form-group mb-3">
                     <button id="magic" class="btn btn-success w-100" onclick="fetchMetaData(this)">
                                 <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true" hidden></span>
+                                <i id="magic-wand" class="fa fa-magic me-2"></i>
                                 <span class="button-loading" hidden>Loading...</span>
                                 <span class="button-text">Magic!</span>
                             </button>
                 </div>
             </div>
-
+        </div>
+        <div id="magic-error-container" class="row" hidden>
+            <p class="text-danger">There was an error when we tried to fetch the data from an API. Could you please check very carefully the DOI, arXiv, or package name? After you checked, please try again.
+            </p>
+            <p class="text-danger">
+                Please also note that it does not always work smoothly and the APIs that we use here are out of our control.</p>
         </div>
         <script src="{{ url_for('static', filename='js/external_apis.js') }}"></script>
     </div>
