--- a/flaskinventory/templates/view/elements/organization/ownership.html
+++ b/flaskinventory/templates/view/elements/organization/ownership.html
@@ -26,7 +26,7 @@
 <div class="border rounded p-3">
     <dl class="row">
         <dt class="col-sm-3 mb-2"><h5>Economic</h5></dt>
-        <dd class="col-sm-9">
+        <dd class="col-sm-9"></dd>
             {% if entry.ownership_kind %}
             <dt class="col-sm-3">Type of Organization</dt>
             <dd class="col-sm-9">{{ entry.ownership_kind }}
@@ -35,6 +35,10 @@
             <dt class="col-sm-3">Employees</dt>
             <dd class="col-sm-9">{{ entry.employees }}</dd>
             {% endif %}
-        </dd>
+        
+        {% if entry.party_affiliated %}
+        <dt class="col-sm-3">Affiliated with a political party<a data-bs-toggle="tooltip" data-bs-placement="top" data-bs-html="true" title="Affiliated means that a political party or a party-related association or company owns at least 50% of the organization OR that persons who have a central role in the organization (or the affiliated associations) have or had also a central role in a political party."><i class="fas mx-1 fa-question-circle"></i></a></dt>
+        <dd class="col-sm-9">{{ entry.party_affiliated }}</dd>
+        {% endif %}
 </div>
 {% endif %}
