--- a/flaskinventory/templates/view/elements/source/research.html
+++ b/flaskinventory/templates/view/elements/source/research.html
@@ -2,13 +2,31 @@
     <dl class="row">
         <dt class="col-sm-3 mb-4"><h5>Research</h5></dt>
         <dd class="col-sm-9 mb-4"><small class="text-muted">Following publications investigated this source. The date range indicates the sample composition.</small></dd>
-        {% if entry.papers %} {% for paper in entry.papers %}
-        <dt class="col-sm-3"></dt>
-        <dd>
-            <a href="{{ url_for('view.view_researchpaper', uid=paper.uid) }}">
-                <span class="d-inline-block text-truncate" style="max-width: 140px;"><em>{{paper.title}}</em></span> <span class="d-inline-block text-truncate" style="max-width: 140px;">{% if paper.authors is string %} {{ paper.authors }}{%else%}{{
-                        paper.authors[0] }}{%endif%}</span>
-            </a> <span class="text-muted mx-3">{% if paper.get('papers|from') %} from: {{ paper.get('papers|from') }}</span>{%endif%} {% if paper.get('papers|to') %}
-            <span class="text-muted mx-1">to: {{ paper.get('papers|to') }}</span> {%endif%}{% endfor %}</dd>{% endif %}
+        {% if entry.papers %} 
+            {% for paper in entry.papers %}
+                <dt class="col-sm-3">
+                        <em>{{paper.title}} ({{ paper.published_date.strftime('%Y') }})</em>
+                </dt>
+                <dd class="col-sm-9 mb-4">
+                    <a href="{{ url_for('view.view_researchpaper', uid=paper.uid) }}">
+                        {% if paper.authors is string %}
+                            {{ paper.authors }}
+                        {% else %}
+                            {{ paper.authors[0] }} et al.
+                        {% endif %}
+                    </a> 
+                    {% if paper.get('papers|from') %} 
+                        <span class="text-muted mx-3">
+                            from: {{ paper.get('papers|from').strftime('%Y-%m-%d') }}
+                        </span>
+                    {%endif%} 
+                    {% if paper.get('papers|to') %}
+                        <span class="text-muted mx-1">
+                            to: {{ paper.get('papers|to').strftime('%Y-%m-%d') }}
+                        </span> 
+                    {%endif%}
+            </dd>
+            {% endfor %}
+        {% endif %}
     </dl>
 </div>
