--- a/flaskinventory/templates/sidebar.html
+++ b/flaskinventory/templates/sidebar.html
@@ -4,7 +4,7 @@
     </a>
     <div class="list-group list-group-flush border-bottom scrollarea">
         {% if sidebar_items %} {% for item in sidebar_items %}
-        <a href="{{ url_for('view.view_source', unique_name=item.unique_name) }}" class="list-group-item list-group-item-action py-3 lh-tight">
+        <a href="{{ url_for('view.view_generic', dgraph_type='Source', unique_name=item.unique_name) }}" class="list-group-item list-group-item-action py-3 lh-tight">
             <div class="d-flex w-100 align-items-center justify-content-between">
                 <strong class="mb-1">{{ item.name }} ({{item.channel.name}})</strong>
                 <small></small>
