--- a/flaskinventory/templates/view/elements/entry_status.html
+++ b/flaskinventory/templates/view/elements/entry_status.html
@@ -1,12 +1,12 @@
-{% if entry.entry_review_status == "pending" %}
+{% if entry.entry_review_status.lower()  == "pending" %}
 <span data-bs-toggle="tooltip" data-bs-placement="top" title="This entry has to be checked by a reviewer first. Currently, it is only visible to you and reviewers" class="badge bg-primary">Review status: pending</span> 
 {% endif %}
 
-{% if entry.entry_review_status == "draft" %}
+{% if entry.entry_review_status.lower() == "draft" %}
 <span data-bs-toggle="tooltip" data-bs-placement="top" title="This entry is currently a draft and is only visible to you."  class="badge bg-secondary">Draft</span> 
 {% endif %}
 
 
-{% if entry.entry_review_status == "rejected" %}
+{% if entry.entry_review_status.lower() == "rejected" %}
 <span data-bs-toggle="tooltip" data-bs-placement="top" title="This entry was rejected."  class="badge bg-danger">Rejected</span> 
 {% endif %}
