--- a/flaskinventory/templates/view/elements/organization/location.html
+++ b/flaskinventory/templates/view/elements/organization/location.html
@@ -7,7 +7,7 @@
         <dt class="col-sm-3">Country</dt>
         <dd class="col-sm-9">
             {% for country in entry.country %}
-                <a href="{{ url_for('view.view_country', unique_name=country.unique_name) }}">{{ country.name }}</a> 
+                <a href="{{ url_for('view.view_generic', dgraph_type='Country', unique_name=country.unique_name) }}">{{ country.name }}</a> 
             {% endfor %}
         </dd>
         {% endif %}
