--- a/flaskinventory/templates/view/elements/source/research.html
+++ b/flaskinventory/templates/view/elements/source/research.html
@@ -8,7 +8,7 @@
                         <em>{{paper.title}} ({{ paper.published_date.strftime('%Y') }})</em>
                 </dt>
                 <dd class="col-sm-9 mb-4">
-                    <a href="{{ url_for('view.view_researchpaper', uid=paper.uid) }}">
+                    <a href="{{ url_for('view.view_generic', dgraph_type='ResearchPaper', uid=paper.uid) }}">
                         {% if paper.authors is string %}
                             {{ paper.authors }}
                         {% else %}
