--- a/flaskinventory/templates/view/elements/tool/research.html
+++ b/flaskinventory/templates/view/elements/tool/research.html
@@ -5,7 +5,7 @@
         {% if entry.papers %} {% for paper in entry.papers %}
         <dt class="col-sm-3"></dt>
         <dd>
-            <a href="{{ url_for('view.view_researchpaper', uid=paper.uid) }}">
+            <a href="{{ url_for('view.view_generic', dgraph_type='ResearchPaper', uid=paper.uid) }}">
                 <span class="d-inline-block text-truncate" style="max-width: 140px;"><em>{{paper.title}}</em></span> <span class="d-inline-block text-truncate" style="max-width: 140px;">{% if paper.authors is string %} {{ paper.authors }}{%else%}{{
                         paper.authors[0] }}{%endif%}</span>
             </a>
