--- a/flaskinventory/templates/view/generic.html
+++ b/flaskinventory/templates/view/generic.html
@@ -23,7 +23,8 @@
             <i class="fas fa-check fa-stack-1x fa-inverse" aria-hidden="true"></i>
             </span> 
         {% endif %}
-        <small class="fs-6 mx-4 text-muted">({{ entry.uid }})</small>
+        <small class="fs-6 fw-normal mx-4 text-dark">Type: {{ dgraph_type }}</small>
+        <small class="fs-6 fw-normal mx-4 text-muted">UID: <span class="font-monospace">{{ entry.uid }}</span></small>
         </h2>
     </div>
     <div>
