#6 #30 #38 #115 #116 add better duplicate checks

--- a/flaskinventory/templates/add/sidebar.html
+++ b/flaskinventory/templates/add/sidebar.html
@@ -42,6 +42,10 @@
             <p class="text-danger">
                 Please also note that it does not always work smoothly and the APIs that we use here are out of our control.</p>
         </div>
+        <div id="magic-warning-container" class="alert alert-warning" role="alert" hidden>
+             <h4 class="alert-heading">Warning!</h4>
+             <p></p>
+          </div>
         <script src="{{ url_for('static', filename='js/external_apis.js') }}"></script>
     </div>
     {% endif %}
